syntax = "proto3";

import "shared/user/v1/user.proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}

  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string username = 3;
  shared.user.v1.UserGender gender = 4;
}

message RegisterResponse { shared.user.v1.User user = 1; }

message LogoutRequest { string access_token = 1; }

message LogoutResponse { bool result = 1; }

message VerifyTokenRequest { string access_token = 1; }

message VerifyTokenResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
}

message RefreshTokenRequest { string refresh_token = 1; }

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}